manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aksdisttest-f0b6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aksdisttest-f0b6"
  template:
    metadata:
      labels:
        app: "aksdisttest-f0b6"
    spec:
      containers:
        - name: "aksdisttest-f0b6"
          image: "distributionregistry.azurecr.io/aksdisttest"
          ports:
          - containerPort: 8089
