manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "aksdisttest-f0b6"
    labels:
        app: "aksdisttest-f0b6"
spec:
    type: ClusterIP
    ports:
    - port: 8089
      targetPort: 8089
      protocol: TCP
      name: http
    selector:
        app: "aksdisttest-f0b6"
